--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,18 @@ body {
   pointer-events: all;
 }
 
+.icons{
+   margin: auto 0;
+ }
+
+ .iconBtn,
+ .btnToDo {
+   border: 0;
+   width: 30px;
+   background-color: white;
+   cursor: pointer;
+ }
+
 .flex-end {
   display: flex;
   justify-content: space-between;
@@ -29,12 +41,6 @@ body {
 h1 {
   font-size: 18px;
   font-weight: 400;
-}
-
-.icons {
-  width: 18px;
-  height: 18px;
-  margin: auto 0;
 }
 
 #addlist {
