--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
   padding: 5px 5px;
   margin: 1px 5px;
   background-color: #fff;
-  pointer-events: all;
+  /* pointer-events: all; */
 }
 
 .icons{
